--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/fawad/.netbeans/22/build.properties
+user.properties.file=/home/ghost/.netbeans/23/build.properties
